--- a/package.json
+++ b/package.json
@@ -19,18 +19,19 @@
     "url": "https://github.com/MomenNano/api-template/issues"
   },
   "homepage": "https://github.com/MomenNano/api-template#readme",
-  "devDependencies": {
-    "@types/node": "^18.6.2",
-    "ts-standard": "^11.0.0",
-    "typescript": "^4.7.4"
-  },
   "dependencies": {
     "@fastify/autoload": "^5.1.0",
     "@fastify/sensible": "^5.1.0",
     "@fastify/under-pressure": "^7.0.0",
+    "ajv-formats": "^2.1.1",
     "env-schema": "^5.0.0",
     "fastify": "^4.3.0",
     "fastify-plugin": "^4.0.0",
     "fluent-json-schema": "^3.1.0"
+  },
+  "devDependencies": {
+    "@types/node": "^18.6.2",
+    "ts-standard": "^11.0.0",
+    "typescript": "^4.7.4"
   }
 }
