--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@fastify/autoload": "^5.1.0",
     "@fastify/sensible": "^5.1.0",
+    "@fastify/swagger": "^7.4.1",
     "@fastify/under-pressure": "^7.0.0",
     "ajv-formats": "^2.1.1",
     "env-schema": "^5.0.0",
