--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "clean": "rm -rf dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "prisma": {
+    "schema": "database/schema.prisma",
+    "seed": "ts-node database/seed/index.ts"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/MomenNano/api-template.git"
@@ -24,6 +28,7 @@
     "@fastify/sensible": "^5.1.0",
     "@fastify/swagger": "^7.4.1",
     "@fastify/under-pressure": "^7.0.0",
+    "@prisma/client": "^4.1.1",
     "ajv-formats": "^2.1.1",
     "env-schema": "^5.0.0",
     "fastify": "^4.3.0",
@@ -32,6 +37,8 @@
   },
   "devDependencies": {
     "@types/node": "^18.6.2",
+    "prisma": "^4.1.1",
+    "ts-node": "^10.9.1",
     "ts-standard": "^11.0.0",
     "typescript": "^4.7.4"
   }
