docker: add condition on depends on for redis

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,8 @@ services:
     depends_on:
       api-db:
         condition: service_healthy
+      redis:
+        condition: service_healthy
     env_file:
       - .env
     build:
