--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "npm run clean && npm run build && node dist/index.js",
     "clean": "rm -rf dist",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "db:up": "docker-compose up -d sarie-db",
+    "db:up": "docker-compose up -d api-db",
     "db:seed": "npx prisma db seed",
     "db:down": "docker-compose down",
     "db:delete": "docker-compose down -v",
@@ -35,6 +35,7 @@
   "homepage": "https://github.com/MomenNano/api-template#readme",
   "dependencies": {
     "@fastify/autoload": "^5.1.0",
+    "@fastify/redis": "^6.0.0",
     "@fastify/sensible": "^5.1.0",
     "@fastify/swagger": "^7.4.1",
     "@fastify/under-pressure": "^7.0.0",
