--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Fastify API Template. Written with TypeScript.",
   "main": "index.js",
   "scripts": {
+    "lint": "ts-standard | snazzy",
+    "lint:fix": "standard --fix",
+    "test:unit": "npm run build && jest --testPathPattern=dist/",
     "build": "tsc -p tsconfig.json",
     "start": "npm run clean && npm run build && node dist/index.js",
     "clean": "rm -rf dist",
@@ -49,8 +52,12 @@
     "fluent-json-schema": "^3.1.0"
   },
   "devDependencies": {
+    "@types/jest": "^28.1.6",
     "@types/node": "^18.6.2",
+    "jest": "^28.1.3",
     "prisma": "^4.1.1",
+    "snazzy": "^9.0.0",
+    "ts-jest": "^28.0.7",
     "ts-node": "^10.9.1",
     "ts-standard": "^11.0.0",
     "typescript": "^4.7.4"
