--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,18 +11,18 @@ on:
 
 jobs:
   test:
+
     runs-on: ubuntu-latest
-  steps:
+
+    steps:
     - uses: actions/checkout@v3
 
     - name: Use Node.js
       uses: actions/setup-node@v3
       with:
         node-version: 16
-        
+
     - name: Install Dependencies
-        run: |
-          npm install --ignore-scripts
+        run: npm install --ignore-scripts
     - name: Run Tests
-        run: |
-          npm run test:unit
+        run: npm run test:unit
