--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,8 @@ jobs:
         node-version: 16
 
     - name: Install Dependencies
-        run: npm install
+        run: |
+          npm install
 
     - name: Run Tests
         run: npm run test:unit
