--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
         node-version: 16
 
     - name: Install Dependencies
-      run: npm  ci
+      run: npm  install --ignore-scripts
 
     - name: Run Tests
       run: npm run test:unit
