--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,9 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: Start containers
+      run: npm run redis:up && npm run db:up
+
     - name: Use Node.js
       uses: actions/setup-node@v3
       with:
