--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,4 +38,6 @@ jobs:
       run: npx prisma generate
 
     - name: Run Tests
+      env:
+        DATABASE_URL: ${{ secrets.DATABASE_URL }}
       run: npm run test:unit
