--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@fastify/redis": "^6.0.0",
     "@fastify/sensible": "^5.1.0",
     "@fastify/swagger": "^7.4.1",
+    "@fastify/type-provider-json-schema-to-ts": "^2.0.0",
     "@fastify/under-pressure": "^7.0.0",
     "@prisma/client": "^4.1.1",
     "ajv-formats": "^2.1.1",
